Fixed alignment with cards on admin side, really messy code but it works

--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -224,15 +224,39 @@ footer{
 #currentDateInfo{
     grid-column: 2;
     width: 100%;
+    height: 100%;
     background-color: lightgreen;
     word-break: break-word;
     display: grid;
-    grid-template-columns: 10% auto auto 10%;
+    grid-template-columns: 10% auto 10% auto 10%;
     grid-template-rows: auto auto;
-
     border: 5px solid black;
+
 }
 
+#index{
+    border-top: 2px solid black;
+    width: 100%;
+    grid-column: 3;
+    grid-row: 2;
+    
+}
+
+.number{
+    width: 100%;
+    margin-top: 0.5em;
+    height: 3.2em;
+    background-color: red;
+    display: grid;
+    align-content: center;
+}
+.number p{
+    font-size: 2em;
+}
+
+#id h2{
+    grid-row:1;
+}
 
 #males{
     width: 100%;
@@ -243,19 +267,9 @@ footer{
 
 #females{
     width: 100%;
-    grid-column: 3;
+    grid-column: 4;
     border-right: 2px solid black;
     grid-row: 2;
-}
-
-#middle{
-    margin-top: 0.2em;
-    width: 100%;
-    border-top: 2px solid black;
-    display: grid;
-    grid-row: 2;
-    grid-column: 3;
-    
 }
 
 .maleClass, .femaleClass, .males, .females{
@@ -273,7 +287,6 @@ footer{
     background-color: pink;
 }
 
-
 .males, .females{
     border: none;
     height: 3.2em;
@@ -282,12 +295,15 @@ footer{
 }
 
 #males, #females{
-    margin-top: 0.2em;
     border-top: 2px solid black;
 }
 
 .males p, .females p, .maleClass p{
     font-size: 1em;
+}
+
+#index::-webkit-scrollbar, #males::-webkit-scrollbar{
+  display: none;
 }
 
 #startDateButton{
@@ -306,4 +322,8 @@ footer{
 #currentDateInfoHeader{
     grid-column: 1/span 4;
     font-size: 1.8em;
+}
+
+.scroller {
+  overflow-y: auto;
 }
